# python-hostsresolver

./: .gitignore  .travis.yml  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
hostsresolver/: cache.py  hostsfile_source.py  vagrant_hostmanager_source.py  vagrant_source.py
tests/: hosts  test_cache.py  test_hostsfile_source.py  test_vagrant_hostmanager_source.py  test_vagrant_source.py
tests/custom_vagrant_project/.custom_vagrant_internal_data/machines/first.machine.example.org/openstack/: id
tests/custom_vagrant_project/.custom_vagrant_internal_data/machines/second.machine.example.org/openstack/: id
