[metadata]
name = python-hostsresolver
url = https://github.com/internap/python-hostsresolver
author = Internap Hosting
author-email = opensource@internap.com
summary = Translate ephemeral virtual machines names into IP addresses for python projects without requiring
          any modification to the libraries or any external domain name server
description-file =
    README.md
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Telecommunications Industry
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    hostsresolver

[bdist_wheel]
universal = 1

[nosetests]
no-path-adjustment = 1
logging-level = DEBUG
